--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MahmoudPortoflio</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>MahmoudPortoflio</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
+<body>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  <% if current_user %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
+<% if current_user %>
   <%= link_to "logout", destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to "login", new_user_session_path%>
-    <%= link_to "register", new_user_registration_path%>
-  <% end %>
-  <%= yield %>
-  </body>
+<% else %>
+  <%= link_to "login", new_user_session_path %>
+  <%= link_to "register", new_user_registration_path %>
+<% end %>
+
+<%= yield %>
+
+<% unless session[:source].blank? %>
+  <h4> Thank for Visiting me from <%= session[:source] %></h4>
+<% end %>
+
+<div class="debug m-3">
+  <%= debug(params) if Rails.env.development? %>
+</div>
+
+
+</body>
 </html>
