--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-<% if current_user %>
+<% if current_user.is_a?(User) %>
   <%= link_to "logout", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "login", new_user_session_path %>
@@ -22,7 +22,7 @@
 <% end %>
 
 <%= yield %>
-
+<h3>HI, <%= current_user.first_name unless current_user.blank? %></h3>
 <% unless session[:source].blank? %>
   <h4> Thank for Visiting me from <%= session[:source] %></h4>
 <% end %>
