--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
@@ -16,14 +16,14 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-<%= render "shared/nav" %>
-
 <% if current_user.is_a?(User) %>
   <%= link_to "logout", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "login", new_user_session_path %>
   <%= link_to "register", new_user_registration_path %>
 <% end %>
+
+<%= render "shared/nav" %>
 
 <%= yield %>
 <h3>HI, <%= current_user.first_name unless current_user.blank? %></h3>
