--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,30 +1,5 @@
 <%= notice %>
 
-<h1> Create a new Portfolio Item</h1>
+<h1> Edit a Portfolio Item</h1>
 
-<%= form_for @portfolio do |f| %>
-
-  <div class="field">
-    <p>  <%= f.label :title %> </p>
-    <p>  <%= f.text_field :title %> </p>
-  </div>
-
-  <div class="field">
-    <p>  <%= f.label :subtitle %> </p>
-    <p>  <%= f.text_field :subtitle %> </p>
-  </div>
-
-  <div class="field">
-    <p>  <%= f.label :body %> </p>
-    <p>  <%= f.text_area :body %> </p>
-  </div>
-
-
-  <div class="actions">
-    <p>  <%= f.submit%> </p>
-  </div>
-
-
-
-
-<% end %>
+<%= render 'form' ,portfolio: @portfolio %>
