--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,7 @@
 
 <%= render "shared/nav" %>
 
-<% if current_user.is_a?(User) %>
-  <%= link_to "logout", destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to "login", new_user_session_path %>
-  <%= link_to "register", new_user_registration_path %>
-<% end %>
+<%= login_helper %>
 
 <%= yield %>
 <h3>HI, <%= current_user.first_name unless current_user.blank? %></h3>
