--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
 
 <%= yield %>
 <h3>HI, <%= current_user.first_name unless current_user.blank? %></h3>
-<% unless session[:source].blank? %>
-  <h4> Thank for Visiting me from <%= session[:source] %></h4>
-<% end %>
+
+
+<%= source_helper %>
 
 <div class="debug m-3">
   <%= debug(params) if Rails.env.development? %>
